See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.48.00

              pamsumm: fix syntax error message.

              Add pbmtocis, cistopbm.  Thanks John Elliott
              <jce@seasip.demon.co.uk>.

              Build: Configure recognizes libvga.a installed without
              libvga.so and offers that as default.

              Build: fix failure of a merge build on a system that doesn't
              have the PNG library.

09.06.27 BJH  Release 10.47.00

              Add pamsistoaglyph.  Thanks Scott Pakin.

              pnmpsnr: Use more precise math to conclude that images are
              identical.

              Add /usr/share/netpbm/rgb.txt to search path for color
              dictionary.

              Remove nstring.h from exported interfaces.

              giftopnm: improve efficiency.

              libppmd: Add ppmd_point-based functions (ppmd_linep(), etc).

              pnmremap: fix: -firstisdefault uses an arbitrary color from the
              map as default.

              pnmremap: fix -missingcolor:  where map file (ergo output) is not
              depth 3, uses an arbitrary color.

              pnmremap: fix loss of dithering when the map (and thus the
              output) has lower maxval than the input.  (Old code scales down
              to the new maxval before dithering).

              giftopnm: fix for unlikely case of a block smaller than a code.

              ppmpat: fix crash in -squig.

              ppmpat: fix crash when width or height is zero.

              ppmpat: fix wrong output with -poles.

              libppmd (ppmpat, ppmdraw): Fix various out of bounds number
              problems.

              ilbmtoppm: fix some bug in interpreting ILBM input.
              (due to wrong pm_uintFromBigend16()).  From 10.46.

              ximtoppm: fix crash in command line processing.
