@@ -6,6 +6,8 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.48.00
 
+              pamtotiff: do miniswhite properly with 8 and 16 bit samples.
+
               pamsumm: fix syntax error message.
 
               Add pbmtocis, cistopbm.  Thanks John Elliott
